--- a/project.html
+++ b/project.html
@@ -11,20 +11,18 @@
      	<center><h1> Zixiong Feng </h1></center>
       
    <center><ul><strong>
-  			<li> < </li>
-        	<li>🏡Home</li>
+  			  <li> < </li>
+        <li><a href="https://zixiong2.github.io">🏡Home</a></li>
         	<li> > < </li>
   			<li><a href="resume Zixoing Feng.pdf">📃Resume</a></li>
         	<li> > < </li>
-  			<li><a href="project.html">💻Project</a></li>
+  			<li>💻Project</li>
        	 	<li> > < </li>
   			<li><a href="mailto:zixiong2@illinois.edu">✉️Email Me</a></li>
        	 	<li> > </li>
   			</strong></ul></center>
       
-      <center><p>I am Zixiong Feng, a Freshman in University of Illinois at Urbana-Chanmaign.<br>
-  		I am from Beijing, China, and have been studying in U.S for nearly 4 years.<br> My dream major was mechinal engineering, but at the very moment that I step in the realm of Computer Science, I find myself fall in love with it. 
+      <center><p>This is project page!
   	</p></center>
 	</body>
 </html>
-
