--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<body>
     	<center><img src="https://s7.postimg.org/yp4p71s4r/imageedit_2_8144453994.png" height = 150 width = 150>
       	</center>
-     	<center><h1> Zixiong Feng </h1></center>
+     	<center><h1><strong>Zixiong Feng </strong></h1></center>
       
-   <center><ul><strong>
+   <center><ul class="secondary"><strong>
   			<li> < </li>
         	<li>🏡Home</li>
         	<li> > < </li>
@@ -23,8 +23,21 @@
   			</strong></ul></center>
       
       <center><p>I am Zixiong Feng, a Freshman in University of Illinois at Urbana-Chanmaign.<br>
-  		I am from Beijing, China, and have been studying in U.S for nearly 4 years.<br> My dream major was mechinal engineering, but at the very moment that I step in the realm of Computer Science, I find myself fall in love with it. 
+  		I am from Beijing, China, and have been studying in U.S for nearly 4 years.<br> My dream major was mechinal engineering, but at the very moment that I step in the realm of Computer Science, I find myself fall in love with it. <br> I have learning experience in java and python, and are currently learning web design and mobile development. I have made a group project -- a mobile app, which you can see the introduction in the link above.
   	</p></center>
+
+	  	<center><p>Fun Fact About me
+	</p></center>
+
+	<center><ul>
+		<li>My favorite sports is basketball.</li>
+		<li>My favorite food is Gonpao Chicken.</li>
+		<li>I made my pet cat an instagram account! Ins: bear_thechartrex</li>
+		<li>I lived in an University for 12 years.</li>
+		<li>I love sneakers and hoodies!</li>
+		<li>This is my first website! 
+	</ul></center>
+
 	</body>
 </html>
 
