--- a/project.html
+++ b/project.html
@@ -22,7 +22,11 @@
        	 	<li> > </li>
   			</strong></ul></center>
       
-      <center><p>This is project page!
+      <center><p>
+        <img src="https://s2.postimg.org/l5z4rav3t/slide1.png" height = 450 width = 450>
+        <img src="https://s2.postimg.org/k3oy8rk09/slide2.png" height = 450 width = 450>
+        <img src="https://s2.postimg.org/js7hvf3e1/slide3.png" height = 450 width = 450>
+        <img src="https://s2.postimg.org/rky5ne1nd/slide4.png" height = 450 width = 450>
   	</p></center>
 	</body>
 </html>
