--- a/project.html
+++ b/project.html
@@ -10,7 +10,7 @@
       	</center>
      	<center><h1> Zixiong Feng </h1></center>
       
-   <center><ul><strong>
+   <center><ul class="secondary"><strong>
   			  <li> < </li>
         <li><a href="https://zixiong2.github.io">🏡Home</a></li>
         	<li> > < </li>
@@ -22,11 +22,11 @@
        	 	<li> > </li>
   			</strong></ul></center>
       
-      <center><p>
-        <img src="https://s2.postimg.org/l5z4rav3t/slide1.png" height = 450 width = 450>
-        <img src="https://s2.postimg.org/k3oy8rk09/slide2.png" height = 450 width = 450>
-        <img src="https://s2.postimg.org/js7hvf3e1/slide3.png" height = 450 width = 450>
-        <img src="https://s2.postimg.org/rky5ne1nd/slide4.png" height = 450 width = 450>
-  	</p></center>
+      <center>
+        <img src="https://s2.postimg.org/l5z4rav3t/slide1.png" height = 450 width = auto>
+        <img src="https://s2.postimg.org/k3oy8rk09/slide2.png" height = 450 width = auto>
+        <img src="https://s2.postimg.org/js7hvf3e1/slide3.png" height = 450 width = auto>
+        <img src="https://s2.postimg.org/rky5ne1nd/slide4.png" height = 450 width = auto>
+  	</center>
 	</body>
 </html>
