--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
        	 	<li> > </li>
   			</strong></ul></center>
       
-      <center><p>I am Zixiong Feng, a Freshman in University of Illinois at Urbana-Chanmaign.
+      <center><p class="first">I am Zixiong Feng, a Freshman in University of Illinois at Urbana-Chanmaign.
   		I am from Beijing, China, and have been studying in U.S for nearly 4 years.My dream major was mechinal engineering, but at the very moment that I step in the realm of Computer Science, I find myself fall in love with it. I have learning experience in java and python, and are currently learning web design and mobile development. I have made a group project -- a mobile app, which you can see the introduction in the link above.
   	</p></center>
 
