--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<ul>
 		<li>My favorite sports is basketball.</li>
 		<li>My favorite food is Gonpao Chicken.</li>
-		<li>I made my pet cat an instagram account! Ins: bear_thechartrex</li>
+		<li>I made my pet cat an instagram account!</li>
 		<li>I lived in an University for 12 years.</li>
 		<li>I love sneakers and hoodies!</li>
 		<li>This is my first website! 
