--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 
 	<body>
-    	<center><img src="https://s7.postimg.org/yp4p71s4r/imageedit_2_8144453994.png" height = 150 width = 150>
+    	<center><img src="https://i.postimg.cc/P50Pd9mn/imageedit-2-8144453994.png" height = 150 width = 150>
       	</center>
      	<center><h1><strong>Zixiong Feng</strong></h1></center>
       
